--- a/my-portfolio/src/components/Contact/Contact.css
+++ b/my-portfolio/src/components/Contact/Contact.css
@@ -14,12 +14,6 @@
   font-size: 80px;
   font-weight: 600;
 }
-.contact-title img {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-}
 .contact-section {
   display: flex;
   gap: 150px;
@@ -60,45 +54,91 @@
   align-items: start;
   gap: 30px;
 }
-.contact-right label{
-    color: #D8D8D8;
-    font-size: 22px;
-
+.contact-right label {
+  color: #d8d8d8;
+  font-size: 22px;
 }
-.contact-right input{
-    border: none;
-    width: 700px;
-    height: 78px;
-    padding-left: 20px;
-    border-radius: 4px;
-    background: #32323c;
-    color: #A0A0A0;
-    font-family: poppins;
-    font-size: 20px;
+.contact-right input {
+  border: none;
+  width: 700px;
+  height: 78px;
+  padding-left: 20px;
+  border-radius: 4px;
+  background: #32323c;
+  color: #a0a0a0;
+  font-family: poppins;
+  font-size: 20px;
 }
-.contact-right textarea{
-    border: none;
-    width: 650px;
-    height: 200px;
-    padding: 25px;
-    border-radius: 4px;
-    background: #32323c;
-    color: #A0A0A0;
-    font-family: poppins;
-    font-size: 20px;
+.contact-right textarea {
+  border: none;
+  width: 650px;
+  height: 200px;
+  padding: 25px;
+  border-radius: 4px;
+  background: #32323c;
+  color: #a0a0a0;
+  font-family: poppins;
+  font-size: 20px;
 }
-.contact-submit{
-    border: none;
-    color: white;
-    border-radius: 50px;
-    background: linear-gradient(270deg, #ffc700 0%, #b415ff 100%);
-    font-size: 22px;
-    padding: 20px 60px;
-    margin-bottom: 50px;
-    cursor: pointer;
-    transition: 0.3s;
+.contact-submit {
+  border: none;
+  color: white;
+  border-radius: 50px;
+  background: #0d2452;
+  font-size: 22px;
+  padding: 20px 60px;
+  margin-bottom: 50px;
+  cursor: pointer;
+  transition: 0.3s;
+  margin-left: 100px;
 }
 .contact-submit:hover{
-    transform: scale(1.1);
-    transition: 0.3s;
+  border: 2px solid white;
+}
+.contact-submit:hover {
+  transform: scale(1.1);
+  transition: 0.3s;
+}
+@media (max-width: 768px) {
+  .contact {
+    gap: 50px;
+    margin: 50px 70px;
+    align-items: start;
+  }
+  .contact-title h1 {
+    padding: 0;
+    font-size: 50px;
+    font-weight: 600;
+  }
+  .contact-title img {
+    width: 130px;
+    margin-right: -20px;
+  }
+  .contact-section {
+    flex-direction: column;
+  }
+  .contact-left h1{
+    font-size: 54px;
+  }
+  .contact-left p{
+    font-size: 18px;
+  }
+  .contact-detail img{
+    width: 25px;
+  }
+  .contact-right label{
+    font-size: 20px;
+  }
+  .contact-right input{
+    width: 100%;
+    font-size: 20px;
+  }
+  .contact-right textarea{
+    width: 95%;
+    font-size: 20px;
+  }
+  .contact-submit{
+    font-size: 20px;
+    padding: 15px 40px;
+  }
 }
