--- a/my-portfolio/src/components/Services/Services.css
+++ b/my-portfolio/src/components/Services/Services.css
@@ -14,18 +14,12 @@
   font-size: 80px;
   font-weight: 600;
 }
-.services-title img {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-}
 .services-format {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 5px;
-  padding: 60px;
+  padding: 10px;
   border-radius: 10px;
   border: 2px solid white;
   transition: 0.4s;
@@ -42,12 +36,10 @@
   font-weight: 600;
 }
 .services-format h2 {
-  font-size: 38px;
+  font-size: 24px;
   font-weight: 800;
-  background: linear-gradient(270deg, #085e17 50.41%, #086450 90.25%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 .services-format p {
   color: #d4d4d4;
@@ -63,7 +55,43 @@
 }
 .services-format:hover {
   border: 2px solid #29ad86;
-  background-image: linear-gradient(45deg, #3f0028, #582300);
+  background-image: linear-gradient(#2d5c34, #333d50);
   transform: scale(1.05);
-  transition: 0.4s;
+  transition: 0.3s;
+}
+@media (max-width:768px) {
+  .services{
+    align-items: center;
+    gap: 70px;
+    margin: 20px 70px;
+  }
+  .services-title h1{
+    padding: 0;
+    font-size: 50px;
+  }
+  .services-title img{
+    width: 130px;
+    margin-right: -20px;
+  }
+  .services-format{
+    gap: 20px;
+    padding: 32px;
+  }
+  .services-format h2{
+    font-size: 28px;
+  }
+  .services-format p{
+    font-size: 18px;
+    line-height: 32px;
+    max-width: 300px;
+
+  }
+  .services-readmore img{
+    width: 20px;
+  }
+  .services-container{
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+  }
+  
 }
