--- a/my-portfolio/src/components/Contact/Contact.css
+++ b/my-portfolio/src/components/Contact/Contact.css
@@ -26,7 +26,7 @@
 .contact-left h1 {
   font-size: 80px;
   font-weight: 700;
-  background: linear-gradient(270deg, #ffc700 0%, #b415ff 100%);
+  background: linear-gradient(270deg, #1caa68 0%, #181142 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
