--- a/my-portfolio/src/components/Footer/Footer.css
+++ b/my-portfolio/src/components/Footer/Footer.css
@@ -1,89 +1,72 @@
-.footer{
-    background-color: #282c34;
-   
-    display: flex;
-    flex-direction: column;
-    gap: 30px; 
-    width: 100%;
+.footer {
+  background-color: #0d2452;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 100%;
 }
-.footer-top{
-    display: flex;
-    justify-content: space-between;
-
+.footer-top {
+  display: flex;
+  justify-content: space-between;
 }
-.footer-top-left p{
-    font-size: 20px;
-    max-width: 400px;
-    margin: 20px;
-
+.footer-top-left p {
+  font-size: 20px;
+  max-width: 400px;
+  margin: 20px;
 }
-.footer-top-right{
-    display: flex;
-    align-items: center;
-    gap: 35px;
+.footer-top-right {
+  display: flex;
+  align-items: center;
+  gap: 35px;
 }
-.footer-email-input{
-    display: flex;
-    gap: 30px;
-    padding: 20px 30px;
-    border-radius: 50px;
-    background: #32323B;
-    padding-right: 80px;
+.footer-email-input {
+  display: flex;
+  gap: 30px;
+  padding: 20px 30px;
+  border-radius: 50px;
+  background: #32323b;
+  padding-right: 80px;
 }
-.footer-email-input input{
- outline: none;
- border: none;
- background: transparent;
- color: #a0a0a0;
-font-family: sans-serif;
-font-size: 18px;
+.footer-email-input input {
+  outline: none;
+  border: none;
+  background: transparent;
+  color: #a0a0a0;
+  font-family: sans-serif;
+  font-size: 18px;
 }
-.footer-subscribe{
-    font-size: 20px;
-    padding: 22px 50px;
-    border-radius: 50px;
-    background: #0d2452;
-    cursor: pointer;
-    transition: 0.3s;
-    margin: 10px 20px;
+.footer-subscribe {
+  font-size: 20px;
+  padding: 22px 50px;
+  border-radius: 50px;
+  background: #0d2452;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: 10px 20px;
 }
-.footer-bottom{
-    display: flex;
-    justify-content: space-between;
-   font-size: 18px;
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
 }
-.footer-bottom-right{
-    display: flex;
-    gap: 50px;
-    margin-bottom: 50px;
-
+.footer-bottom-right {
+  display: flex;
+  gap: 50px;
+  margin-bottom: 50px;
 }
-.footer-bottom-right p{
-margin-right: 20px;
+.footer-bottom-right p {
+  margin-right: 20px;
 }
-.footer-email-input:hover{
-    border: 2px solid white;
-
+.footer-email-input:hover {
+  border: 2px solid white;
 }
-.footer-subscribe:hover{
-    background: #29ad86;
-    transition: scale(1.1);
+.footer-subscribe:hover {
+  background: #0d2452;
+  transition: scale(1.1);
+  border: 2px solid white;
 }
-.footer-bottom-left{
-   margin: 20px;
+.footer-bottom-left {
+  margin: 20px;
 }
 
-@media (max-width:768px) {
-    .footer{
-        margin: 50px 70px;
-    }
-    .footer-top{
-        flex-direction: column;
-        gap: 50px;
-    }
-    .footer-bottom{
-        display: flex;
-        flex-direction: column-reverse;
-        margin-bottom: 50px;
-    }
-}
+
