--- a/my-portfolio/src/components/MyWork/Mywork.css
+++ b/my-portfolio/src/components/MyWork/Mywork.css
@@ -16,7 +16,7 @@
 }
 .mywork-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 20px;
 }
 .mywork-container img {
