--- a/my-portfolio/src/components/Services/Services.css
+++ b/my-portfolio/src/components/Services/Services.css
@@ -43,7 +43,7 @@
 }
 .services-format p {
   color: #d4d4d4;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 40px;
   max-width: 300px;
 }
@@ -55,7 +55,7 @@
 }
 .services-format:hover {
   border: 2px solid #29ad86;
-  background-image: linear-gradient(#2d5c34, #333d50);
+  background-image: linear-gradient(#1f3823, #447da3);
   transform: scale(1.05);
   transition: 0.3s;
 }
