--- a/my-portfolio/src/index.css
+++ b/my-portfolio/src/index.css
@@ -7,5 +7,5 @@ body{
     height: 100vh;
     background: #161513;
     color: white;
-    font-family: calibri;
+    font-family: Arial, Helvetica, sans-serif;
 }
